fix: apply dark mode to all elements correctly

--- a/src/runtime/assets/css/editable-content.css
+++ b/src/runtime/assets/css/editable-content.css
@@ -59,6 +59,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: var(--sui-fg);
 }
 
 /* util classes */
